# inspirehep

./: justfile
.github/workflows/: inspirehep-backend-tests.yml  inspirehep-e2e-tests.yml  inspirehep-editor-tests.yml  inspirehep-pull-request-master.yml  inspirehep-tests.yml  inspirehep-ui-tests.yml  pre-commit.yml
backend/: Dockerfile  pyproject.toml  run-code-checks.sh
backend/inspirehep/: utils.py
backend/scripts/: bootstrap  console  server  setup  update
workflows/dags/literature/: hep_create_dag.py
