[project]
name = "inspirehep"
version = "0.1.19"
description = "INSPIRE is a trusted community hub that helps researchers to share and find accurate scholarly information in high energy physics."
authors = [{ name = "CERN", email = "admin@inspirehep.net" }]
requires-python = ">=3.11,<3.12"
license = "MIT"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Development Status :: 5 - Production/Stable",
]
dependencies = [
    "celery>=5.3.6,<6",
    "Flask>=1.0.2",
    "msgpack==0.6.2",
    "inspire-utils>=3.0.63",
    "inspire-service-orcid",
    "inspire-json-merger>=11.0.37,<12",
    "invenio-access",
    "invenio-accounts",
    "invenio-app==1.5.0",
    "invenio-base~=1.4",
    "invenio-cache==1.3.0",
    "invenio-celery==1.3.1",
    "invenio-config==1.0.4",
    "invenio-db==1.1.5",
    "invenio-i18n~=2.1",
    "invenio-jsonschemas==1.0.1",
    "invenio-mail==1.0.2",
    "invenio-oauth2server==1.0.4",
    "invenio-oauthclient",
    "invenio-pidstore>=1.2.1,<2",
    "invenio-records",
    "invenio-rest>=1.2.4,<2",
    "invenio-search[opensearch2]==2.3.1",
    "marshmallow<3.0.0",
    "flask-shell-ipython~=0.3,>=0.3.0",
    "flask-sqlalchemy",
    "orcid==1.0.3",
    "wtforms==2.3.3",
    "node-semver<0.2.0,>=0.1.1",
    "pybtex",
    "cryptography>=36.0.2,<37",
    "flask-kvsession",
    "python-redis-lock~=3.3",
    "lxml~=5.0",
    "fqn-decorators~=1.2,>=1.2.3",
    "editdistance>=0.8.1,<0.9",
    "munkres~=1.0",
    "rt~=1.0",
    "gunicorn>=19.0.0,<20",
    "sentry-sdk[flask]>=0.10.2,<0.11",
    "prometheus-flask-exporter>=0.15.0,<0.16",
    "numpy>=1.17.0",
    "structlog~=19.2",
    "colorama>=0.4.1,<0.5",
    "structlog-sentry~=1.1",
    "humanize>=0.5.1,<0.6",
    "feedgen>=0.8.0,<0.9",
    "flask-mail>=0.9.1,<0.10",
    "prometheus_client>=0.7.1,<0.8",
    "inspire-dojson",
    "boto3>=1.11.5,<2",
    "python-magic>=0.4.15,<0.5",
    "inspire-query-parser>=6.0.50,<7",
    "deepdiff>=4.3.2,<5",
    "xmltodict>=0.12.0,<0.13",
    "inspire-matcher>=9.0.36,<10",
    "pylatexenc~=2.8",
    "pypdf2>=1.26.0,<2",
    "refextract>=1.0.3,<2",
    "invenio-oaiserver",
    "orjson>=3.4.6,<4",
    "sword2",
    "sqlalchemy-continuum",
    "backoff>=1.10.0,<2",
    "pdfplumber>=0.7.5,<0.8",
    "psycopg2-binary>=2.9.5,<3",
    "freezegun>=1.2.2,<2",
    "itsdangerous~=2.0",
    "twisted>=22.4.0,<23",
    "tenacity>=8.2.2,<9",
    "MarkupSafe==2.0.1",
    "click>=8,<9",
    "invenio-records-rest",
    "Werkzeug==2.1.0",
    "SQLAlchemy>=1.3.13,<2",
    "opensearch-py==2.2.0",
    "parsel>=1.9.1,<2",
    "inspire-schemas>=61.6.10,<62",
]

[project.urls]
Homepage = "https://inspirehep.net"
Repository = "https://github.com/inspirehep/inspirehep"

[project.scripts]
inspirehep = "inspirehep.cli:cli"

[project.entry-points."invenio_db.alembic"]
inspirehep = "inspirehep:alembic"

[project.entry-points."invenio_pidstore.minters"]
literature_minter = "inspirehep.pidstore.minters.control_number:LiteratureMinter.mint"
authors_minter = "inspirehep.pidstore.minters.control_number:AuthorsMinter.mint"
jobs_minter = "inspirehep.pidstore.minters.control_number:JobsMinter.mint"
journals_minter = "inspirehep.pidstore.minters.control_number:JournalsMinter.mint"
experiments_minter = "inspirehep.pidstore.minters.control_number:ExperimentsMinter.mint"
conferences_minter = "inspirehep.pidstore.minters.control_number:ConferencesMinter.mint"
data_minter = "inspirehep.pidstore.minters.control_number:DataMinter.mint"
institutions_minter = "inspirehep.pidstore.minters.control_number:InstitutionsMinter.mint"
seminars_minter = "inspirehep.pidstore.minters.control_number:SeminarsMinter.mint"

[project.entry-points."invenio_base.api_blueprints"]
inspirehep = "inspirehep.views:blueprint"
inspirehep_mailing = "inspirehep.mailing.views:blueprint"
inspirehep_records = "inspirehep.records.views:blueprint"
inspirehep_search = "inspirehep.search.views:blueprint"
inspirehep_sitemap = "inspirehep.sitemap.views:blueprint"
inspirehep_submissions = "inspirehep.submissions.views:blueprint"
inspirehep_accounts = "inspirehep.accounts.views:blueprint"
inspirehep_legacy = "inspirehep.legacy.views:blueprint"
inspirehep_editor = "inspirehep.editor.views:blueprint"
inspirehep_tools = "inspirehep.tools.views:blueprint"
inspirehep_assign = "inspirehep.assign.views:blueprint"
inspirehep_matcher = "inspirehep.matcher.views:blueprint"
invenio_oaiserver = "invenio_oaiserver.views.server:blueprint"
inspirehep_curation = "inspirehep.curation.views:blueprint"
inspirehep_hal = "inspirehep.hal.views:blueprint"
inspirehep_snow = "inspirehep.snow.views:blueprint"

[project.entry-points."invenio_config.module"]
inspirehep = "inspirehep.config"
inspirehep_accounts = "inspirehep.accounts.config"
inspirehep_editor = "inspirehep.editor.config"
inspirehep_files = "inspirehep.files.config"
inspirehep_logger = "inspirehep.logger.config"
inspirehep_mailing = "inspirehep.mailing.config"
inspirehep_matcher = "inspirehep.matcher.config"
inspirehep_oai = "inspirehep.oai.config"
inspirehep_orcid = "inspirehep.orcid.config"
inspirehep_records = "inspirehep.records.config"
inspirehep_search = "inspirehep.search.config"
inspirehep_sitemap = "inspirehep.sitemap.config"
inspirehep_hal = "inspirehep.hal.config"
inspirehep_cds = "inspirehep.cds.config"
inspirehep_snow = "inspirehep.snow.config"

[project.entry-points."invenio_base.api_apps"]
inspirehep_logger = "inspirehep.logger:InspireLogger"
inspirehep_mailing = "inspirehep.mailing:InspireMailing"
inspirehep_orcid = "inspirehep.orcid:InspireOrcid"
inspirehep_records = "inspirehep.records:InspireRecords"
inspirehep_s3 = "inspirehep.files:InspireS3"

[project.entry-points."invenio_base.api_converters"]
doipath = "inspirehep.pidstore.converters:DOIPathConverter"
arxivpath = "inspirehep.pidstore.converters:ArXivPathConverter"
inspirepid = "inspirehep.pidstore.converters:InspirePIDConverter"

[project.entry-points."invenio_jsonschemas.schemas"]
inspirehep_records_schemas = "inspire_schemas"

[project.entry-points."invenio_search.mappings"]
records = "inspirehep.search.mappings"

[project.entry-points."invenio_db.models"]
inspirehep_records = "inspirehep.records.models"
inspirehep_cds = "inspirehep.cds.models"

[project.entry-points."invenio_celery.tasks"]
inspirehep_indexer = "inspirehep.indexer.tasks"
inspirehep_orcid = "inspirehep.orcid.tasks"
inspirehep_submissions = "inspirehep.submissions.tasks"
inspirehep_matcher = "inspirehep.matcher.tasks"
inspirehep_disambiguation = "inspirehep.disambiguation.tasks"
inspirehep_hal = "inspirehep.hal.tasks"
inspirehep_cds = "inspirehep.cds.tasks"
inspirehep_curation = "inspirehep.curation.tasks"

[dependency-groups]
dev = [
    "coverage[toml]>=7.0.0,<8",
    "isort>=5.6.4,<6",
    "mock>=3.0.0,<4.0.0",
    "pydocstyle>=2.0.0",
    "pytest>=7,<8",
    "pytest-cov>=3,<4",
    "pytest-invenio>=2.2.1,<3",
    "pytest-mock>=1.6.0",
    "pytest-random-order>=0.5.4",
    "pytest-datadir",
    "remote-pdb",
    "black==18.9b0",
    "factory_boy~=2.11.1,>=2.11.1",
    "requests-mock~=1.5.2,>=1.5.2",
    "pytest-vcr~=1.0.2",
    "pre-commit",
    "pylint",
    "flake8",
    "watchdog",
    "virtualenv<16.5.0",
    "ipdb>=0.12.0,<0.13",
    "vcrpy>=2.1.0,<3",
    "web-pdb~=1.5",
    "moto>=4.0.11,<5",
    "pytest-testmon>=2.1.1,<3",
    "pytest-github-actions-annotate-failures>=0.2,<0.3",
    "pytest-split>=0.7,<0.8",
    "pytest-celery>=0.0.0,<0.0.1",
]

[tool.uv]

[tool.uv.sources]
inspire-service-orcid = { git = "https://github.com/inspirehep/inspire-service-orcid.git", rev = "1a0e762e58bc9cac65f7665b9831993c017fd8bb" }
invenio-access = { git = "https://github.com/inspirehep/invenio-access.git", rev = "1.4.3" }
invenio-accounts = { git = "https://github.com/inspirehep/invenio-accounts.git", branch = "rest-api" }
invenio-oauthclient = { git = "https://github.com/inspirehep/invenio-oauthclient.git", branch = "rest-api" }
invenio-records = { git = "https://github.com/inspirehep/invenio-records" }
flask-sqlalchemy = { git = "https://github.com/inspirehep/flask-sqlalchemy.git", rev = "7a998a522642a9fb89445ee6b790f05986bde481" }
flask-kvsession = { git = "https://github.com/inspirehep/flask-kvsession.git" }
inspire-dojson = { git = "https://github.com/inspirehep/inspire-dojson.git" }
invenio-oaiserver = { git = "https://github.com/inspirehep/invenio-oaiserver.git", rev = "33691ef9ba3f1a241a1c0adc9c3ca21319559bd2" }
sword2 = { git = "https://github.com/inspirehep/python-client-sword2.git", rev = "python3" }
sqlalchemy-continuum = { git = "https://github.com/inspirehep/sqlalchemy-continuum.git", rev = "021b59836eaa702fb2ee01f7192985e5bb632e43" }
invenio-records-rest = { git = "https://github.com/inspirehep/invenio-records-rest.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"
multi_line_output = 3
atomic = true
skip = "ui"

[tool.coverage.run]
omit = ["inspirehep/accounts/handlers.py",]

[tool.pytest.ini_options]
addopts = "--random-order --cov=inspirehep --cov-report=term-missing -p no:warnings"
testpaths = "tests"
norecursedirs = "tests/integration/orcid/helpers"
